mps-kit-1.114.0/code/mps.h

/* Abstract Types */

typedef struct mps_arena_s  *mps_arena_t;  /* arena */
typedef struct mps_pool_s   *mps_pool_t;   /* pool */
typedef struct mps_fmt_s    *mps_fmt_t;    /* object format */
typedef struct mps_root_s   *mps_root_t;   /* root */
typedef struct mps_thr_s    *mps_thr_t;    /* thread registration */
typedef struct mps_ap_s     *mps_ap_t;     /* allocation point */
typedef struct mps_ss_s     *mps_ss_t;     /* scan state */
typedef struct mps_frame_s
  *mps_frame_t;                            /* allocation frames */
/* Concrete Types */

typedef int mps_bool_t;         /* boolean (int) */
typedef int mps_res_t;          /* result code (int) */
typedef void *mps_addr_t;       /* managed address (void *) */
_mps_ENUM_DEF(_mps_RES_ENUM, MPS_RES_)

/* Format and Root Method Types */
/* see design.mps.root-interface */
/* see design.mps.format-interface */

typedef mps_res_t (*mps_root_scan_t)(mps_ss_t, void *, size_t);
/* Allocation Point */
/* .ap: Keep in sync with <code/mpmst.h#ap>. */

typedef struct mps_ap_s {       /* allocation point descriptor */
  mps_addr_t init;              /* limit of initialized memory */
  mps_addr_t alloc;             /* limit of allocated memory */
  mps_addr_t limit;             /* limit of available memory */
  mps_addr_t _frameptr;         /* lightweight frame pointer */
  mps_bool_t _enabled;          /* lightweight frame status */
  mps_bool_t _lwpoppending;     /* lightweight pop pending? */
} mps_ap_s;
extern void mps_arena_release(mps_arena_t);
extern mps_res_t mps_arena_collect(mps_arena_t);
extern void mps_arena_destroy(mps_arena_t);
extern void mps_fmt_destroy(mps_fmt_t);
extern void mps_pool_destroy(mps_pool_t);
extern void mps_ap_destroy(mps_ap_t);
extern mps_res_t (mps_reserve)(mps_addr_t *, mps_ap_t, size_t);
extern mps_res_t (mps_ap_frame_push)(mps_frame_t *, mps_ap_t);
extern mps_res_t (mps_ap_frame_pop)(mps_ap_t, mps_frame_t);
extern void mps_root_destroy(mps_root_t);
extern mps_res_t mps_thread_reg(mps_thr_t *, mps_arena_t);
extern void mps_thread_dereg(mps_thr_t);